--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <link rel="canonical" href="http://mcclone2001.github.com">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+
     <script type="application/ld+json">
       {
                       }
@@ -78,8 +80,8 @@
       </div>
 
       <div class="g--10 m--1 card">
-        <h2>Formación</h2>
-        <div class="g--8 m--4">
+        <h2>Educación</h2>
+        <div class="g--8 m--4 g-t--10 m-t--1">
           <p>Ingeniería en Sistemas Computacionales</p>
           <p>Maestría en Ciencias de la Computación</p>
           <p>SCRUM Master Certificado</p>
@@ -137,37 +139,38 @@
       </div>
 
       <div class="g--10 m--1 card">
-        <h2>Herramientas</h2>
-        <div class="g--8 m--4">
-          <p>PHP</p>
-          <p>Vue.Js</p>
-          <p>Laravel</p>
-          <p>LAMP</p>
-          <p>JQuery</p>
-          <p>SQL</p>
-          <p>MariaDB</p>
-          <p>REST</p>
+        <h2>Herramientas preferidas</h2>
+        <div class="g--8 m--4 g-t--10 m-t--1">
+          <div class="tile bg--belize color--white">LAMP</div>
+          <div class="tile bg--asphalt color--white">PHP</div>
+          <div class="tile bg--belize color--white">Laravel</div>
+          <div class="tile bg--asphalt color--white">Vue.Js</div>
+          <div class="tile bg--belize color--white">JQuery</div>
+          <div class="tile bg--asphalt color--white">SQL</div>
+          <div class="tile bg--belize color--white">MariaDB</div>
+          <div class="tile bg--asphalt color--white">REST</div>
         </div>
       </div>
 
       <div class="g--10 m--1 card">
         <h2>Metodología</h2>
-        <div class="g--8 m--4">
-          <p>Agile</p>
-          <p>DRY</p>
-          <p>Lean</p>
-          <p>KISS</p>
-          <p>SOLID</p>
-          <p>FIRST</p>
-          <p>Microservices</p>
+        <div class="g--8 m--4 g-t--10 m-t--1">
+          <div class="tile bg--asphalt color--white">Agile</div>
+          <div class="tile bg--belize color--white">Lean</div>
+          <div class="tile bg--asphalt color--white">DRY</div>
+          <div class="tile bg--belize color--white">KISS</div>
+          <div class="tile bg--asphalt color--white">SOLID</div>
+          <div class="tile bg--belize color--white">FIRST</div>
+          <div class="tile bg--asphalt color--white">Microservices</div>
         </div>
       </div>
 
       <div class="g--10 m--1 card">
         <h2>Contacto</h2>
-        <div class="g--8 m--4">
-          <p>52 961 659 9617</p>
-          <p>mcclone2001@gmail.com</p>
+        <div class="g--8 m--4 g-t--10 m-t--1">
+          <p><i class="fas fa-envelope"></i> mcclone2001@gmail.com</p>
+          <p><i class="fas fa-phone"></i> 52 961 659 9617</p>
+          <a href="https://wa.me/5219616599617?text=Hola Iván, vi tu CV y quiero hablar contigo"><i class="fab fa-whatsapp-square"></i> Enviar un WhatsApp</a>
         </div>
       </div>
 
