Agregando Click to call
Para que puedan marcar al número telefónico con un sólo click

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
         <h2>Contacto</h2>
         <div class="g--8 m--4 g-t--10 m-t--1">
           <p><i class="fas fa-envelope"></i> mcclone2001@gmail.com</p>
-          <p><i class="fas fa-phone"></i> 52 961 659 9617</p>
-          <a href="https://wa.me/5219616599617?text=Hola Iván, vi tu CV y quiero hablar contigo"><i class="fab fa-whatsapp-square"></i> Enviar un WhatsApp</a>
+          <p><a href="tel:+52-961-659-9617"><i class="fas fa-phone"></i> 52 961 659 9617</a></p>
+          <p><a href="https://wa.me/5219616599617?text=Hola Iván, vi tu CV y quiero hablar contigo"><i class="fab fa-whatsapp-square"></i> Enviar un WhatsApp</a></p>
         </div>
       </div>
 
