Animaciones de entrada
Fade ins para dar retoques

--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
     <main class="g--12 no-margin-vertical">
 
       <div class="g--10 m--1 container container--wrap--s card fade-in-from-top">
-        <div class="g--4 g-s--12 text-center fade-in-from-top anim-delay--10">
+        <div class="g--4 g-s--12 text-center fade-in-from-top anim-delay--5">
           <amp-img alt="Iván Quiñones"
             src="IvanQuinones.jpg"
             width="200"
             height="200">
           </amp-img>
         </div>
-        <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s text-center fade-in-from-top anim-delay--20">
+        <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s text-center fade-in-from-top anim-delay--15">
           <h1>Iván Quiñones</h1>
         </div>
       </div>
 
-      <div class="g--10 m--1 card">
+      <div class="g--10 m--1 card fade-in-from-top anim-delay--20">
         <h2>Educación</h2>
         <div class="g--8 m--4 g-t--10 m-t--1">
           <p>Ingeniería en Sistemas Computacionales</p>
@@ -88,7 +88,7 @@
         </div>
       </div>
 
-      <div class="g--10 m--1 card">
+      <div class="g--10 m--1 card fade-in-from-top anim-delay--25">
 
         <h2>Experiencia</h2>
 
@@ -167,8 +167,8 @@
 
       <div class="g--10 m--1 card">
         <h2>Contacto</h2>
-        <div class="g--8 m--4 g-t--10 m-t--1">
-          <p><i class="fas fa-envelope"></i> mcclone2001@gmail.com</p>
+        <div class="g--8 m--4 g-t--10 m-t--1">          
+          <p><a href="mailto:mcclone2001@gmail.com?subject=Hola Iván, vi tu CV"><i class="fas fa-envelope"></i> mcclone2001@gmail.com</a></p>
           <p><a href="tel:+52-961-659-9617"><i class="fas fa-phone"></i> 52 961 659 9617</a></p>
           <p><a href="https://wa.me/5219616599617?text=Hola Iván, vi tu CV y quiero hablar contigo"><i class="fab fa-whatsapp-square"></i> Enviar un WhatsApp</a></p>
         </div>
