Mejorando el printer friendly
Agregando mas campos a la version printer friendly

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
           .noPrint{display:none;}
           .noScreen{}
       }
+
+      .inline { display: inline;  }
     </style>
     <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
     <script async custom-element="amp-lightbox-gallery" src="https://cdn.ampproject.org/v0/amp-lightbox-gallery-0.1.js"></script>
@@ -87,19 +89,19 @@
     <main class="g--12 no-margin-vertical noPrint">
 
       <div class="g--10 m--1 container container--wrap--s card fade-in-from-top">
-        <div class="g--4 g-s--12 text-center fade-in-from-top anim-delay--5">
+        <div class="g--4 g-s--12 text-center no-margin-vertical fade-in-from-top">
           <amp-img alt="Iván Quiñones"
             src="IvanQuinones.jpg"
             width="200"
             height="200">
           </amp-img>
         </div>
-        <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s text-center fade-in-from-top anim-delay--15">
-          <h1>Iván Quiñones</h1>
+        <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s text-center no-margin-vertical fade-in-from-top">
+          <h1 class="no-margin-vertical">Iván Quiñones</h1>
         </div>
       </div>
 
-      <div class="g--10 m--1 card fade-in-from-top anim-delay--20">
+      <div class="g--10 m--1 card fade-in-from-top">
         <h2><i class="fas fa-university"></i> Educación</h2>
         <div class="g--8 m--4 g-t--10 m-t--1">
           <p>Ingeniería en Sistemas Computacionales</p>
@@ -108,15 +110,15 @@
         </div>
       </div>
 
-      <div class="g--10 m--1 card fade-in-from-top anim-delay--25 pagebreak">
-        <h2><i class="fas fa-award"></i> Experiencia</h2>
+      <div class="g--10 m--1 card fade-in-from-top">
+        <h2><i class="fas fa-award"></i> Experiencia como Líder de proyectos</h2>
         <div class="g--12 container container--wrap--s">
           <div class="g--4 g-s--12 text-center">
             2017 - Actual
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <h3>Líder de desarrollo de software</h3>
-            <p>Importante empresa del ramo turístico mexicano</p>
+            <h3>Plataforma de distribución de servicios turísticos</h3>
+            <p>Para importante empresa del ramo turístico mexicano</p>
             <p>Dirigiendo 17 desarrolladores in situ y remotos</p>
           </div>
         </div>
@@ -125,8 +127,8 @@
             2011 - 2016
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <h3>Líder de desarrollo de software</h3>
-            <p>Distribuidor Comex: Comercializadora de Pinturas y Complementos</p>
+            <h3>ERP inhouse para controlar almacenes, POS, contabilidad, cartera de clientes, etc.</h3>
+            <p>Para Comercializadora de Pinturas y Complementos, distribuidor de Comex en Chiapas</p>
             <p>Dirigiendo 5 desarrolladores</p>
           </div>
         </div>
@@ -135,8 +137,8 @@
             2009 - 2010
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <h3>Líder de desarrollo de software</h3>
-            <p>Votia Consultoría y Soluciones</p>
+            <h3>Kioskos de información turística para la Secretaría de Turismo del Estado de Chiapas</h3>
+            <p>Para Votia Consultoría y Soluciones</p>
             <p>Dirigiendo 4 desarrolladores</p>
           </div>
         </div>
@@ -145,8 +147,8 @@
             2008
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <h3>Líder de desarrollo de software</h3>
-            <p>Negotia Impulsora de Negocios</p>
+            <h3>Portal publicitario de comercio local y regional</h3>
+            <p>Para Negotia Impulsora de Negocios</p>
             <p>Dirigiendo 4 desarrolladores</p>
           </div>
         </div>
@@ -250,7 +252,7 @@
             <p>Dirigir, edificar y complementar equipos de trabajo interdisciplinarios orientados a resultados, enfocado a generar trabajo de alta calidad que exceda las expectativas</p>
           </div>
         </div>
-        <div class="g--12 container container--wrap--s">
+        <div class="g--12 container container--wrap--s noScreen">
           <div class="g--4 g-s--12 text-center">
             <h3>Agilizar</h3>
           </div>
@@ -260,13 +262,76 @@
         </div>
       </div>
 
-
-
     </main>
 
-    <div class="noScreen">
-      <h2>Sólo para impresiones</h2>
+    <div class="g--12 no-margin-vertical noScreen">
+      <div class="g--12 container tile no-margin-vertical">
+        <div class="g--8 no-margin-vertical">
+          <h2>Iván Quiñones López</h2>
+        </div>        
+        <div class="g--4 no-margin-vertical">
+          <p>https://mcclone2001.github.io<br/>
+          mcclone2001@gmail.com<br/>
+          52 ( 961 ) 659 9617</p>
+        </div>
+      </div>
+      <div class="g--12 no-margin-vertical">
+        <div class="g--12 no-margin-vertical">
+          <h3><i class="fas fa-university"></i> Educación</h3>
+        </div>
+        <div class="g--11 m--1 no-margin-vertical">
+          <p>Ingeniería en Sistemas Computacionales<br/>
+          Maestría en Ciencias de la Computación<br/>
+          SCRUM Master Certificado</p>
+        </div>
+      </div>
+      <div class="g--12 no-margin-vertical">
+        <div class="g--12 no-margin-vertical">
+          <h3><i class="fas fa-award"></i> Experiencia como Líder de proyectos</h3>
+        </div>        
+        <div class="g--11 m--1 no-margin-vertical">
+          <div class="g--12 no-margin-vertical">
+              <h4 class="inline">Plataforma de distribución de servicios turísticos</h4> <span class="subtitle">2017 - Actual</span>
+              <p>Para importante empresa del ramo turístico mexicano<br/>
+              Dirigiendo 17 desarrolladores in situ y remotos</p>
+          </div>
+          <div class="g--12 no-margin-vertical">
+              <h4 class="inline">ERP inhouse para controlar almacenes, POS, contabilidad, cartera de clientes, etc.</h4> <span class="subtitle">2011 - 2016</span>
+              <p>Para Grupo Copico, distribuidor de Comex en Chiapas<br/>
+              Dirigiendo 5 desarrolladores</p>
+          </div>
+          <div class="g--12 no-margin-vertical">
+              <h4 class="inline">Kioskos de información turística para la Secretaría de Turismo del Estado de Chiapas</h4> <span class="subtitle">2009 - 2010</span>
+              <p>Para Votia Consultoría y Soluciones<br/>
+              Dirigiendo 4 desarrolladores</p>
+          </div>
+          <div class="g--12 no-margin-vertical">
+              <h4 class="inline">Portal publicitario de comercio local y regional</h4> <span class="subtitle">2008</span>
+              <p>Para Negotia Impulsora de Negocios<br/>
+              Dirigiendo 4 desarrolladores</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="g--12 no-margin-vertical">
+          <div class="g--12 no-margin-vertical">
+            <h3><i class="fas fa-tools"></i> Herramientas preferidas</h3>
+          </div>
+          <div class="g--11 m--1 container no-margin-vertical">
+            <div class="tile g--2 no-margin-vertical">LAMP</div>
+            <div class="tile g--2 no-margin-vertical">Laravel</div>
+            <div class="tile g--2 no-margin-vertical">Vue.Js</div>
+            <div class="tile g--2 no-margin-vertical">REST</div>
+            <div class="tile g--2 no-margin-vertical">SCRUM</div>
+            <div class="tile g--2 no-margin-vertical">Lean</div>
+            <div class="tile g--2 no-margin-vertical">SOLID</div>
+            <div class="tile g--2 no-margin-vertical">Microservices</div>
+          </div>
+        </div>
+
+      </div>
     </div>
+
 
   </body>
 </html>
