Optimizando descarga de css de fontawesome
Minimizando descarga de css de fontawesome para acelerar la página

--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
     <link rel="canonical" href="http://mcclone2001.github.com">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
-
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
@@ -70,6 +68,23 @@
       {
           .mayor1200px{display: none;}
       }
+
+      .fas{-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;display:inline-block;font-style:normal;font-variant:normal;text-rendering:auto;line-height:1}
+      .fa-university:before{content:"\f19c"}
+      .fa-award:before{content:"\f559"}
+      .fa-tools:before{content:"\f7d9"}
+      .fa-flask:before{content:"\f0c3"}
+      .fa-sliders-h:before{content:"\f1de"}
+      .fa-fist-raised:before{content:"\f6de"}
+      .fa-user-circle:before{content:"\f2bd"}
+      @font-face{
+        font-family:"Font Awesome 5 Free";
+        font-style:normal;
+        font-weight:900;
+        font-display:auto;
+        src:url(https://use.fontawesome.com/releases/v5.7.2/webfonts/fa-solid-900.woff2) format("woff2")
+      }
+      .fa,.far,.fas{font-family:"Font Awesome 5 Free"}.fa,.fas{font-weight:900}
     </style>
     <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
     <script async custom-element="amp-lightbox-gallery" src="https://cdn.ampproject.org/v0/amp-lightbox-gallery-0.1.js"></script>
@@ -99,21 +114,21 @@
     <main class="g--10 m--2 g-m--12 m-m--0 no-margin-vertical noPrint">
 
       <a id="inicio"></a>
-      <div class="g--10 m--1 container container--wrap--s card fade-in-from-top menor1200px">
-        <div class="g--4 g-s--12 text-center no-margin-vertical fade-in-from-top">
+      <div class="g--10 m--1 container container--wrap--s card menor1200px">
+        <div class="g--4 g-s--12 text-center no-margin-vertical" >
           <amp-img alt="Iván Quiñones"
             src="IvanQuinones.jpg"
             width="200"
             height="200">
           </amp-img>
         </div>
-        <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s text-center no-margin-vertical fade-in-from-top">
+        <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s text-center no-margin-vertical ">
           <h1 class="no-margin-vertical">Iván Quiñones</h1>
         </div>
       </div>
 
       <a id="educacion"></a>
-      <div class="g--10 m--1 card fade-in-from-top">
+      <div class="g--10 m--1 card ">
         <h2><i class="fas fa-university"></i> Educación</h2>
         <div class="g--8 m--4 g-t--10 m-t--1">
           <p>Ingeniería en Sistemas Computacionales</p>
@@ -123,7 +138,7 @@
       </div>
 
       <a id="experiencia"></a>
-      <div class="g--10 m--1 card fade-in-from-top">
+      <div class="g--10 m--1 card ">
         <h2><i class="fas fa-award"></i> Experiencia como Líder de desarrollo de software</h2>
         <div class="g--12 container container--wrap--s">
           <div class="g--4 g-s--12 text-center">
