Verificacion de propiedad para google
Agregando etiqueta meta para adjudicar propiedad en google

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 
     <meta name="description" content="SCRUM Master Certificado. Líder de Equipos de Desarrollo de Software">
+    <meta name="google-site-verification" content="cfe0BA5xp0-F9-D_Sqy9ohawEb2x7q7_DNt3X4el2BE" />
 
     <script type="application/ld+json">
       {
