--- a/index.html
+++ b/index.html
@@ -1,20 +1,4 @@
-<!--
-
-  So you are having a look at mi code huh!
-
-  Therefore you might be just like me, curious, thorough, methodic.
-
-  Curiosity has driven humanity since its dawn, its what marked the difference between us and other animals.
-
-  Writing and the scientific method are what has leveraged curiosity in the las hundreds of years allowing humanity to grough its knowledge and drive its progress.
-
-  My search is for knowledge, and i think that the better way to validate and grow knowledge is by aplying it.
-
-  Therefore i choosed to use what i learned and sharpen my skills for the good of mankind.
-
-  Maybe we can work together and create something amazing.
-
--->
+<!-- Fabricado artesanalmente por Iván Quiñones -->
 <!doctype html>
 <html amp lang="es">
   <head>
@@ -114,14 +98,6 @@
           .mayor1200px{display: none;}
       }
 
-      .fas{-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;display:inline-block;font-style:normal;font-variant:normal;text-rendering:auto;line-height:1}
-      .fa-university:before{content:"\f19c"}
-      .fa-award:before{content:"\f559"}
-      .fa-tools:before{content:"\f7d9"}
-      .fa-flask:before{content:"\f0c3"}
-      .fa-sliders-h:before{content:"\f1de"}
-      .fa-fist-raised:before{content:"\f6de"}
-      .fa-user-circle:before{content:"\f2bd"}
       @font-face{
         font-family:"Font Awesome 5 Free";
         font-style:normal;
@@ -130,6 +106,14 @@
         src:url(https://use.fontawesome.com/releases/v5.7.2/webfonts/fa-solid-900.woff2) format("woff2")
       }
       .fa,.far,.fas{font-family:"Font Awesome 5 Free"}.fa,.fas{font-weight:900}
+      .fas{-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;display:inline-block;font-style:normal;font-variant:normal;text-rendering:auto;line-height:1}
+      .fa-university:before{content:"\f19c"}
+      .fa-award:before{content:"\f559"}
+      .fa-tools:before{content:"\f7d9"}
+      .fa-flask:before{content:"\f0c3"}
+      .fa-sliders-h:before{content:"\f1de"}
+      .fa-fist-raised:before{content:"\f6de"}
+      .fa-user-circle:before{content:"\f2bd"}
     </style>
     <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
     <script async custom-element="amp-lightbox-gallery" src="https://cdn.ampproject.org/v0/amp-lightbox-gallery-0.1.js"></script>
