Actualizando version en ingles
Y agregando lo mas reciente en lo que hemos estado trabajando

--- a/index_eng.html
+++ b/index_eng.html
@@ -131,13 +131,13 @@
           </amp-img>
         <h1 class="no-margin-vertical">Iván Quiñones</h1>
       </div>
-      <div class="m--1 g--10 no-margin-vertical"><a href="#educacion">Educación</a></div>
-      <div class="m--1 g--10 no-margin-vertical"><a href="#experiencia">Experiencia</a></div>
-      <div class="m--1 g--10 no-margin-vertical"><a href="#herramientas">Herramientas preferidas</a></div>
-      <div class="m--1 g--10 no-margin-vertical"><a href="#metodologia">Metodología</a></div>
-      <div class="m--1 g--10 no-margin-vertical"><a href="#personalidad">Personalidad</a></div>
-      <div class="m--1 g--10 no-margin-vertical"><a href="#alcance">¿Qué puede hacer?</a></div>
-      <div class="m--1 g--10 no-margin-vertical"><a href="#contacto">Contacto</a></div>
+      <div class="m--1 g--10 no-margin-vertical"><a href="#educacion">Education</a></div>
+      <div class="m--1 g--10 no-margin-vertical"><a href="#experiencia">Experience</a></div>
+      <div class="m--1 g--10 no-margin-vertical"><a href="#herramientas">Tooling</a></div>
+      <div class="m--1 g--10 no-margin-vertical"><a href="#metodologia">Methodology</a></div>
+      <div class="m--1 g--10 no-margin-vertical"><a href="#personalidad">Traits of Personality</a></div>
+      <div class="m--1 g--10 no-margin-vertical"><a href="#alcance">¿What can he do?</a></div>
+      <div class="m--1 g--10 no-margin-vertical"><a href="#contacto">Contact Information</a></div>
     </aside>
 
     <main class="g--10 m--2 g-m--12 m-m--0 no-margin-vertical noPrint">
@@ -158,25 +158,25 @@
 
       <a id="educacion"></a>
       <div class="g--10 m--1 card ">
-        <h2><i class="fas fa-university"></i> Educación</h2>
+        <h2><i class="fas fa-university"></i> Education</h2>
         <div class="g--8 m--4 g-t--10 m-t--1">
-          <p>Ingeniería en Sistemas Computacionales</p>
-          <p>Maestría en Ciencias de la Computación</p>
-          <p>SCRUM Master Certificado</p>
+          <p>Computing Systems Engineering</p>
+          <p>Masters in Computing Sciences</p>
+          <p>Certified SCRUM Master</p>
         </div>
       </div>
 
       <a id="experiencia"></a>
       <div class="g--10 m--1 card ">
-        <h2><i class="fas fa-award"></i> Experiencia como Líder de desarrollo de software</h2>
+        <h2><i class="fas fa-award"></i> Experience as Development Lead</h2>
         <div class="g--12 container container--wrap--s">
           <div class="g--4 g-s--12 text-center">
-            2017 - Actual
+            2017 - Now
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <h3>Plataforma de distribución de servicios turísticos</h3>
-            <p>Para importante empresa del ramo turístico mexicano</p>
-            <p>Dirigiendo 17 desarrolladores in situ y remotos</p>
+            <h3>Tourism Services Distribution Platform</h3>
+            <p>For a important tourism company in the mexican southwest</p>
+            <p>Leading 17 developers in site and remote</p>
           </div>
         </div>
         <div class="g--12 container container--wrap--s">
@@ -184,9 +184,9 @@
             2011 - 2016
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <h3>ERP inhouse para controlar almacenes, POS, contabilidad, cartera de clientes, etc.</h3>
-            <p>Para Comercializadora de Pinturas y Complementos, distribuidor de Comex en Chiapas</p>
-            <p>Dirigiendo 5 desarrolladores</p>
+            <h3>ERP inhouse to control warehouses, invenotires, POS, accounting, clients, etc.</h3>
+            <p>For "Comercializadora de Pinturas y Complementos", a Comex distribuitor in Chiapas</p>
+            <p>Leading 5 developers</p>
           </div>
         </div>
         <div class="g--12 container container--wrap--s">
@@ -194,9 +194,9 @@
             2009 - 2010
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <h3>Kioskos de información turística para la Secretaría de Turismo del Estado de Chiapas</h3>
-            <p>Para Votia Consultoría y Soluciones</p>
-            <p>Dirigiendo 4 desarrolladores</p>
+            <h3>Touristic Information Kiosks for "Secretaría de Turismo del Estado de Chiapas"</h3>
+            <p>For "Votia Consultoría y Soluciones" a consulting firm in Chiapas</p>
+            <p>Leading 4 developers</p>
           </div>
         </div>
         <div class="g--12 container container--wrap--s">
@@ -204,16 +204,16 @@
             2008
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <h3>Portal publicitario de comercio local y regional</h3>
-            <p>Para Negotia Impulsora de Negocios</p>
-            <p>Dirigiendo 4 desarrolladores</p>
+            <h3>Web portal to promote local bussinesses in Chiapas</h3>
+            <p>For "Negotia Impulsora de Negocios"</p>
+            <p>Leading 4 developers</p>
           </div>
         </div>
       </div>
 
       <a id="herramientas"></a>
       <div class="g--10 m--1 card">
-        <h2><i class="fas fa-tools"></i> Herramientas preferidas</h2>
+        <h2><i class="fas fa-tools"></i> Tooling</h2>
         <div class="g--8 m--4 g-t--10 m-t--1">
           <div class="tile bg--midnight-blue color--white">LAMP</div>
           <div class="tile bg--asphalt color--white">PHP</div>
@@ -228,7 +228,7 @@
 
       <a id="metodologia"></a>
       <div class="g--10 m--1 card">
-        <h2><i class="fas fa-flask"></i> Metodología</h2>
+        <h2><i class="fas fa-flask"></i> Methodology</h2>
         <div class="g--8 m--4 g-t--10 m-t--1">
           <div class="tile bg--asphalt color--white">Agile</div>
           <div class="tile bg--midnight-blue color--white">Lean</div>
@@ -244,85 +244,85 @@
 
       <a id="personalidad"></a>
       <div class="g--10 m--1 card">
-        <h2><i class="fas fa-sliders-h"></i> Personalidad</h2>
+        <h2><i class="fas fa-sliders-h"></i> Traits of Personality</h2>
         <div class="g--12 container container--wrap--s">
           <div class="g--4 g-s--12 text-center">
-            <h3>Proactivo</h3>
+            <h3>Proactive</h3>
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <p>Toma la iniciativa en el desarrollo de acciones creativas y audaces para generar mejoras</p>
+            <p>Takes the initiative in proposing and executing bold and creative actions to get better results</p>
           </div>
         </div>
         <div class="g--12 container container--wrap--s">
           <div class="g--4 g-s--12 text-center">
-            <h3>Creativo</h3>
+            <h3>Creative</h3>
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <p>Genera nuevas ideas o conceptos, y nuevas asociaciones entre ideas y conceptos conocidos, que habitualmente producen soluciones originales</p>
+            <p>Creates new ideas or concepts, and new associations between known ideas and conceptos, wich usually get original solutions to the problems we are focusing in.</p>
           </div>
         </div>
         <div class="g--12 container container--wrap--s">
           <div class="g--4 g-s--12 text-center">
-            <h3>Responsable</h3>
+            <h3>Responsible</h3>
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <p>Reflexiona, administra, orienta y valora las consecuencias de sus actos, siempre en el plano de lo moral</p>
+            <p>Reflects, manages, guides and ponders the consequenses of his actions, always in the bounds of morality</p>
           </div>
         </div>
         <div class="g--12 container container--wrap--s">
           <div class="g--4 g-s--12 text-center">
-            <h3>Colaborativo</h3>
+            <h3>Collaborative</h3>
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <p>Disfruta del trabajo en equipo, de interactuar y generar entusiasmo para que el resultado sea satisfactorio en las tareas encomendadas</p>
+            <p>Enjoys teamwork and interaction, and creates entusiasm for the result to be satisfactory in the assigned tasks</p>
           </div>
         </div>
         <div class="g--12 container container--wrap--s">
           <div class="g--4 g-s--12 text-center">
-            <h3>Autodidacta</h3>
+            <h3>Autodidact</h3>
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <p>Busca y experimenta constantemente nuevos conocimientos por adquirir y habilidades por desarrollar</p>
+            <p>Searches and experiments constantly new knowledge and skills to acquire</p>
           </div>
         </div>
       </div>
 
       <a id="alcance"></a>
       <div class="g--10 m--1 card">
-        <h2><i class="fas fa-fist-raised"></i> ¿Qué puede hacer Iván?</h2>
+        <h2><i class="fas fa-fist-raised"></i> What can Iván Do?</h2>
         <div class="g--12 container container--wrap--s">
           <div class="g--4 g-s--12 text-center">
-            <h3>Soluciones de software</h3>
+            <h3>Software Solutions</h3>
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <p>Identificar el área de oportunidad en la cadena de valor, diseñar la solución, construirla, implementarla y mantenerla</p>
+            <p>Identify improvement areas in the value chain and, design, build and implement a software solution to get such improvement</p>
           </div>
         </div>
         <div class="g--12 container container--wrap--s">
           <div class="g--4 g-s--12 text-center">
-            <h3>Construir y reforzar equipos de desarrollo de software</h3>
+            <h3>Build and improve software development teams</h3>
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <p>Dirigir, edificar y complementar equipos de trabajo interdisciplinarios orientados a resultados, enfocado a generar trabajo de alta calidad que exceda las expectativas</p>
+            <p>Build and improve high performing, high quality, result oriented interdisciplinary teams</p>
           </div>
         </div>
         <div class="g--12 container container--wrap--s noScreen">
           <div class="g--4 g-s--12 text-center">
-            <h3>Agilizar</h3>
+            <h3>Agile Transformation</h3>
           </div>
           <div class="g--8 g-s--12 nudge--left nudge--right no-nudge--s">
-            <p>La tecnología ha dinamizado al mundo, solo aquellos que esten preparados para responder rápidamente a los cambios del mercado aprovecharan las oportunidades</p>
+            <p>Technology has speed up the world, only those who are ready will be capable of taking advantage of the changes in its market</p>
           </div>
         </div>
       </div>
 
       <a id="contacto"></a>
       <div class="g--10 m--1 card">
-        <h2><i class="fas fa-user-circle"></i> Contacto</h2>
+        <h2><i class="fas fa-user-circle"></i> Contact Information</h2>
         <div class="g--8 m--4 g-t--10 m-t--1">          
           <p><a href="mailto:mcclone2001@gmail.com?subject=Hola Iván, vi tu CV">mcclone2001@gmail.com</a></p>
           <p><a href="tel:+52-961-659-9617">52 ( 961 ) 659 9617</a></p>
-          <p><a href="https://wa.me/5219616599617?text=Hola Iván, vi tu CV y quiero hablar contigo">Enviar un WhatsApp</a></p>
+          <p><a href="https://wa.me/5219616599617?text=Hola Iván, vi tu CV y quiero hablar contigo">Talk to me on WhatsApp</a></p>
         </div>
       </div>
 
@@ -341,17 +341,17 @@
       </div>
       <div class="g--12 no-margin-vertical">
         <div class="g--12 no-margin-vertical">
-          <h3><i class="fas fa-university"></i> Educación</h3>
+          <h3><i class="fas fa-university"></i> Education</h3>
         </div>
         <div class="g--11 m--1 no-margin-vertical">
-          <p>Ingeniería en Sistemas Computacionales<br/>
-          Maestría en Ciencias de la Computación<br/>
-          SCRUM Master Certificado</p>
+          <p>Computing Systems Engineering<br/>
+          Masters in Computing Sciences<br/>
+          Certificado SCRUM Master</p>
         </div>
       </div>
       <div class="g--12 no-margin-vertical">
         <div class="g--12 no-margin-vertical">
-          <h3><i class="fas fa-award"></i> Experiencia como Líder de desarrollo de software</h3>
+          <h3><i class="fas fa-award"></i> Experience as Software Development Lead</h3>
         </div>        
         <div class="g--11 m--1 no-margin-vertical">
           <div class="g--12 no-margin-vertical">
@@ -390,8 +390,6 @@
             <div class="tile g--2 no-margin-vertical">Lean</div>
             <div class="tile g--2 no-margin-vertical">SOLID</div>
             <div class="tile g--2 no-margin-vertical">Microservices</div>
-            <div class="tile bg--midnight-blue color--white">YAGNI</div>
-            <div class="tile bg--asphalt color--white">DevOps</div>
           </div>
         </div>
 
